--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <title>Technical Landing Page</title>
   </head>
+  
+  <!-- Script for google clarity -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "bv5brodqgk");
+</script>
+  <!-- End Script for google clarity -->
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FR9CTGGZ5E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FR9CTGGZ5E');
+</script>
+  <!-- End script for Google Analytics -->
+  
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
