--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-        <a class="navbar-brand" href="#">Technical Mr.X</a>
+        <a class="navbar-brand" href="tech.html">Technical Mr.X</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,23 +44,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="about.html">About Us</a>
               
             </li>
             
             <li class="nav-item">
-              <a class="nav-link " href="#">Contact Us</a>
+              <a class="nav-link " href="contact.html">Contact Us</a>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="nav-item">
-                <a class="nav-link " href="#">Sign Up</a>
+                <a class="nav-link " href="login.html">Sign Up</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Log In</a>
+                <a class="nav-link " href="login.html">Log In</a>
               </li>
           </ul>
 
