--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
                   </h2>
                   <h1>Your Lab is with Technical Mr.X</h1>
                   <p>Waiting is not easy but just try it this time</p>
-                  <button class="btn btn-success btn-lg">
+                  <a href="lab.html">
+                    <button class="btn btn-success btn-lg">
                     <i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
-                   <br> Click me</button>
+                    <br> Click me</button>
+                  </a>
               </div>
           </div>
       </div>
