--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Technical Landing Page</title>
   </head>
   
-  <!-- Script for google clarity -->
+  <!-- Script for ms clarity -->
   <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -20,13 +20,14 @@
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "bv5brodqgk");
 </script>
-  <!-- End Script for google clarity -->
+  <!-- End Script for ms clarity -->
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FR9CTGGZ5E"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
+  window['ga-disable-G-FR9CTGGZ5E'] = true;
   gtag('js', new Date());
 
   gtag('config', 'G-FR9CTGGZ5E');
