--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
-  //window['ga-disable-G-FR9CTGGZ5E'] = true;
+  window['ga-disable-G-FR9CTGGZ5E'] = true;
   gtag('js', new Date());
 
   gtag('config', 'G-FR9CTGGZ5E');
